# Personnel

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Schema/: README.md  contractor.schema.json  employee.schema.json  person.schema.json  personnel.schema.json  visitor.schema.json
personnel/: __init__.py  __main__.py  cli.py  models.py  registry.py
tests/: test_cli.py  test_init_and_main.py  test_models.py  test_personnel.py  test_registry.py
